Updated tiny contact and about pages text squishing issue.

--- a/client/src/styles/about.scss
+++ b/client/src/styles/about.scss
@@ -44,7 +44,7 @@
         place-self: center;
         text-align-last: center;
         max-width: 40ch;
-        font-size: 2rem;
+        font-size: 1.5rem;
         margin-top: -5em;
 
         .about-description {
